Jobeet Day 14: Translations

--- a/config/packages/twig.yaml
+++ b/config/packages/twig.yaml
@@ -4,3 +4,4 @@ twig:
     strict_variables: '%kernel.debug%'
     globals:
         max_jobs_on_homepage: '%max_jobs_on_homepage%'
+        locales: '%locales%'
