--- a/config/services.yaml
+++ b/config/services.yaml
@@ -5,6 +5,7 @@
 # https://symfony.com/doc/current/best_practices/configuration.html#application-related-configuration
 parameters:
     locale: 'en'
+    locales: ['en', 'pl', 'ru']
     max_jobs_on_homepage: 10
     max_jobs_on_category: 20
 
