Affiliate.orm.yml Job.orm.yml

--- a/config/doctrine/Affiliate.orm.yml
+++ b/config/doctrine/Affiliate.orm.yml
@@ -51,4 +51,4 @@ App\Entity\Affiliate:
                         name: category_id
                         referencedColumnName: id
     lifecycleCallbacks:
-        prePersist: [ setCreatedAtValue ]
+        prePersist: [ prePersist ]
