--- a/config/doctrine/Category.orm.yml
+++ b/config/doctrine/Category.orm.yml
@@ -17,6 +17,12 @@ App\Entity\Category:
             length: 100
             options:
                 fixed: false
+        slug:
+            type: string
+            nullable: false
+            length: 128
+            options:
+                fixed: false
     oneToMany:
         jobs:
             targetEntity: Job
