Jobeet Day 5: The Routing

--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -1,3 +1,7 @@
 #index:
 #    path: /
 #    controller: App\Controller\DefaultController::index
+
+job_homepage:
+    path: /
+    controller: App\Controller\JobController::index
