Jobeet Day 6: More with the Entity - yml - Categories on the Homepage

--- a/config/doctrine/Category.orm.yml
+++ b/config/doctrine/Category.orm.yml
@@ -1,6 +1,6 @@
 App\Entity\Category:
     type: entity
-    #repositoryClass: App\Repository\CategoryRepository
+    repositoryClass: App\Repository\CategoryRepository
     table: category
     id:
         id:
