--- a/package.json
+++ b/package.json
@@ -1,4 +1,25 @@
 {
+  "name": "jobeet4",
+  "version": "1.0.0",
+  "description": "",
+  "main": "webpack.config.js",
+  "directories": {
+    "test": "tests"
+  },
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/sidczak/jobeet4.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/sidczak/jobeet4/issues"
+  },
+  "homepage": "https://github.com/sidczak/jobeet4#readme",
   "devDependencies": {
     "@symfony/webpack-encore": "^0.27.0",
     "bootstrap": "^4.3.1",
