--- a/package.json
+++ b/package.json
@@ -24,6 +24,10 @@
     "@symfony/webpack-encore": "^0.27.0",
     "bootstrap": "^4.3.1",
     "jquery": "^3.4.1",
-    "popper.js": "^1.15.0"
+    "popper.js": "^1.15.0",
+    "vue": "^2.6.10",
+    "vue-loader": "^15.7.1",
+    "vue-router": "^3.0.7",
+    "vue-template-compiler": "^2.6.10"
   }
 }
