vue-api - Step7 - Frontent post in Vue

--- a/package.json
+++ b/package.json
@@ -30,5 +30,9 @@
     "vue-loader": "^15.7.1",
     "vue-router": "^3.0.7",
     "vue-template-compiler": "^2.6.10"
+  },
+  "dependencies": {
+    "axios": "^0.19.0",
+    "vue-axios": "^2.1.4"
   }
 }
