--- a/config/services.yaml
+++ b/config/services.yaml
@@ -9,6 +9,7 @@ parameters:
     max_jobs_on_homepage: 10
     max_jobs_on_category: 20
     jobs_directory: '%kernel.project_dir%/public/uploads/jobs'
+    jobs_web_directory: '/uploads/jobs'
 
 services:
     # default configuration for services in *this* file
@@ -27,10 +28,6 @@ services:
     App\Controller\:
         resource: '../src/Controller'
         tags: ['controller.service_arguments']
-
-    App\Service\FileUploader:
-        arguments:
-            $targetDirectory: '%jobs_directory%'
 
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
