--- a/config/services.yaml
+++ b/config/services.yaml
@@ -29,5 +29,14 @@ services:
         resource: '../src/Controller'
         tags: ['controller.service_arguments']
 
+    App\Service\FileUploader:
+        arguments:
+            $targetDirectory: '%jobs_directory%'
+
+    App\EventListener\JobUploadListener:
+        tags:
+            - { name: doctrine.event_listener, event: prePersist }
+            - { name: doctrine.event_listener, event: preUpdate }
+
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
