--- a/config/services.yaml
+++ b/config/services.yaml
@@ -37,6 +37,11 @@ services:
         tags:
             - { name: doctrine.event_listener, event: prePersist }
             - { name: doctrine.event_listener, event: preUpdate }
+            - { name: doctrine.event_listener, event: postLoad }
+            
+    App\EventListener\JobTokenListener:
+        tags:
+            - { name: doctrine.event_listener, event: prePersist }
 
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
