admin - category page btn edit and del

--- a/config/doctrine/Category.orm.yml
+++ b/config/doctrine/Category.orm.yml
@@ -34,6 +34,7 @@ App\Entity\Category:
         jobs:
             targetEntity: Job
             mappedBy: category
+            cascade: [ remove ]
     manyToMany:
         affiliates:
             targetEntity: Affiliate
