--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -6,7 +6,7 @@ security:
             memory:
                 users:
                     admin:
-                        password: secret
+                        password: adminpass
                         roles: 'ROLE_ADMIN'
     encoders:
         Symfony\Component\Security\Core\User\User: plaintext
