--- a/config/doctrine/User.orm.yml
+++ b/config/doctrine/User.orm.yml
@@ -10,7 +10,7 @@ App\Entity\User:
                 unsigned: false
             id: true
             generator:
-                strategy: AUTO
+                strategy: IDENTITY
     fields:
         createdAt:
             type: datetime
