--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -17,6 +17,10 @@ job_homepage:
 
 fos_user:
     resource: "@FOSUserBundle/Resources/config/routing/all.xml"
+    prefix:
+        en: ''
+        pl: '/pl'
+        ru: '/ru'
 
 # fos_user_security:
 #     resource: "@FOSUserBundle/Resources/config/routing/security.xml"
