--- a/config/services.yaml
+++ b/config/services.yaml
@@ -44,5 +44,9 @@ services:
         tags:
             - { name: doctrine.event_listener, event: prePersist }
 
+    App\EventListener\AffiliateTokenListener:
+        tags:
+            - { name: doctrine.event_listener, event: prePersist }
+
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
