--- a/config/routes/annotations.yaml
+++ b/config/routes/annotations.yaml
@@ -5,3 +5,8 @@ controllers:
         en: ''
         pl: '/pl'
         ru: '/ru'
+
+api_controllers:
+    resource: ../../src/Controller/API/
+    type: annotation
+    prefix: /api/v1/
