API - FOSRest - Affiliate

--- a/config/doctrine/Affiliate.orm.yml
+++ b/config/doctrine/Affiliate.orm.yml
@@ -1,5 +1,6 @@
 App\Entity\Affiliate:
     type: entity
+    repositoryClass: App\Repository\AffiliateRepository
     table: affiliate
     id:
         id:
