API - url update

--- a/config/routes/annotations.yaml
+++ b/config/routes/annotations.yaml
@@ -9,4 +9,4 @@ controllers:
 api_controllers:
     resource: ../../src/Controller/API/
     type: annotation
-    prefix: /api/v1/
+    prefix: /api
