--- a/config/doctrine/Post.orm.yml
+++ b/config/doctrine/Post.orm.yml
@@ -18,6 +18,9 @@ App\Entity\Post:
             length: 0
             options:
                 fixed: false
+        count:
+            type: integer
+            nullable: true
         createdAt:
             type: datetime
             nullable: false
