--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,8 @@
 /.web-server-pid
 ###< symfony/web-server-bundle ###
 /node_modules/
+
+###> phpunit/phpunit ###
+/phpunit.xml
+.phpunit.result.cache
+###< phpunit/phpunit ###
